Fixing boxes and how they stretch

--- a/src/style.css
+++ b/src/style.css
@@ -201,12 +201,12 @@ button[id]:hover {
 /* For both the menus */
 .Menus { 
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 630px));
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     grid-template-rows: 1fr;
-    gap: 15px;
     justify-content: center;
     justify-items: center;
-    width: max(600px, 85vw);
+    align-content: center;
+    width: max(300px, 85vw);
 }
 
 
@@ -245,13 +245,13 @@ button[id]:hover {
     display: grid;
     background-color: white;
     border-radius: 30px;
+    height: max(450px, 80vh);
     width: max(400px, 40vw);
-    height: fit-content;
 }
 
 .SidesMenuBox { 
     width: auto;
-    height: max-content;
+    height: auto;
     margin-left: 15px;
     margin-right: 15px;
     margin-top: 15px;
@@ -260,7 +260,7 @@ button[id]:hover {
     border-radius: 30px;
     display: grid;
     grid-template-columns: 1fr; 
-    grid-template-rows: repeat(auto-fit, auto);
+    grid-template-rows: repeat(auto-fit, 1fr);
     justify-items: center;
 }
 
@@ -280,7 +280,7 @@ button[id]:hover {
     margin-top: 0;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto;
+    grid-template-rows: 1fr;
 }
 
 #SidesDetailsItems, #SidesDetailsPrices { 
@@ -294,6 +294,7 @@ button[id]:hover {
 
 /* Drinks Menu boxes + styles */
 .DrinksMenuBox { 
+    font-family: MainFont;
     width: auto;
     height: auto;
     margin-top: 5px;
@@ -304,21 +305,26 @@ button[id]:hover {
     color: white;
     border-radius: 30px;
     display: grid;
-    grid-template-columns: 1fr; 
+    grid-template-columns: 1fr;
     grid-template-rows: repeat(auto-fit, 1fr);
-    justify-items: start;
+    justify-items: center;
 }
 
 #DrinksBoxHeader {
+    height: 50px;
     font-family: MainFont;
     font-size: 42px;
-    margin: 10px;
-    justify-self: center;
+    margin-top: 10px;
 }
 
 .DrinksMenuDetailsBox { 
+    width: auto;
+    height: auto;
     margin: 10px;
     margin-top: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
 }
 
 #DrinksDetailsItems, #DrinksDetailsPrices { 
